clusters/apps/env/production/home/home-assistant/app/ingressroute.home-assistant.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: hass.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hass.${FAMILY_DOMAIN}`)"
      services:
        - name: ${APP}
          port: 8123
          nativeLB: true
    - kind: Rule
      match: "Host(`home.${FAMILY_DOMAIN}`)"
      services:
        - name: ${APP}
          port: 8123
          nativeLB: true
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: home.${FAMILY_DOMAIN}
