clusters/apps/env/production/home/home-assistant/app/ingressroute.music-assistant.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music-assistant-local
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
    external-dns.alpha.kubernetes.io/hostname: mass.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${CLUSTER_LB_INGRESS_INTERNAL}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`mass.${FAMILY_DOMAIN}`)"
      services:
        - name: home-assistant
          port: 8095
          nativeLB: true
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: mass.${FAMILY_DOMAIN}
